[package]
name = "id-contact-comm-test"
version = "0.1.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-contact-jwe = { git = "https://github.com/id-contact/id-contact-jwe.git" }
rocket = { git = "https://github.com/SergioBenitez/Rocket" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
serde = { version = "1.0.123", features = [ "derive" ] }
serde_json = "1.0.61"
serde_yaml = "0.8.16"
josekit = "0.7.1"
