[package]
name = "id-contact-comm-test"
version = "0.1.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
id-contact-proto = { git = "https://github.com/id-contact/id-contact-proto.git" }
id-contact-jwt = { git = "https://github.com/id-contact/id-contact-jwt.git" }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.123", features = [ "derive" ] }
serde_json = "1.0.61"
serde_yaml = "0.8.16"
josekit = "0.7.1"
